everything so far

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -42,14 +42,14 @@
                     <li><a>Item 3</a></li>
                 </ul>
             </div>
-            <img class=" ml-10 w-20 h-20" src="{% static 'images/manuallogo.png' %}" alt="">
+            <img class=" ml-10 w-28 h-28" src="{% static 'images/manuallogo.png' %}" alt="">
         </div>
         <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li class="menu menu-horizontal px-1 space-x-9">
                     <details>
-                        <summary class="text-white">About</summary>
-                        <ul class="p-2 text-black">
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest">About</summary>
+                        <ul class="p-2 text-black text-lg">
                             <li><a>Mission & Vision</a></li>
                             <li><a>History of the School</a></li>
                             <li><a>School Policies</a></li>
@@ -57,8 +57,8 @@
                         </ul>
                     </details>
                     <details>
-                        <summary class="text-white">Admissions</summary>
-                        <ul class="p-2">
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest">Admissions</summary>
+                        <ul class="p-2 text-black text-lg">
                             <li><a>Application Process</a></li>
                             <li><a>Admission Requirements</a></li>
                             <li><a>Financial Aid</a></li>
@@ -66,8 +66,8 @@
                         </ul>
                     </details>
                     <details>
-                        <summary class="text-white">Athletics</summary>
-                        <ul class="p-2">
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest">Athletics</summary>
+                        <ul class="p-2 text-black text-lg">
                             <li><a>Sports Teams</a></li>
                             <li><a>Game Schedules</a></li>
                             <li><a>Athletic Achievements</a></li>
@@ -76,8 +76,8 @@
                         </ul>
                     </details>
                     <details>
-                        <summary class="text-white">Links</summary>
-                        <ul class="p-2" style="color: antiquewhite;">
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest">Links</summary>
+                        <ul class="p-2 text-black text-lg">
                             <li><a>Student Portal</a></li>
                             <li><a>Parent Portal</a></li>
                             <li><a>Staff Portal</a></li>
@@ -86,8 +86,8 @@
                         </ul>
                     </details>
                     <details>
-                        <summary class="text-white">Contact</summary>
-                        <ul class="p-2">
+                        <summary class="text-white text-lg text-transform: uppercase tracking-widest">Contact</summary>
+                        <ul class="p-2 text-black text-lg">
                             <li><a>Contact Information</a></li>
                             <li><a>School Directory</a></li>
                             <li><a>Map & Directions</a></li>
@@ -101,7 +101,7 @@
         <div class="navbar-end">
         
             <button class="btn btn-ghost btn-circle" onclick="my_modal_2.showModal()">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="white">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 " style = "margin-right: 10px; " fill="none" viewBox="0 0 24 24" stroke="white">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
