--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -118,11 +118,11 @@
                                         d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                                 </svg>
                             </div>
-                            <input type="search" id="default-search"
-                                class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-red-500 focus:border-red-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500"
-                                placeholder="Search Teachers, Admin..." required />
+                            <input  type="search" id="default-search"
+                                class=" block w-full p-4 ps-10 text-lg outline-none text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-red-500 focus:border-[#9D2235]  "
+                                placeholder="Search for anything Crimson-related here!" required />
                             <button type="submit"
-                                class="text-white absolute end-2.5 bottom-2.5 bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">Search</button>
+                                class="text-white absolute end-2.5 bottom-2.5 bg-[#9D2235] hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 ">Search</button>
                         </div>
                     </form>
                 </div>
