--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -77,7 +77,7 @@
                     </details>
                     <details>
                         <summary class="text-white">Links</summary>
-                        <ul class="p-2" style="color: antiquewhite;">
+                        <ul class="p-2">
                             <li><a>Student Portal</a></li>
                             <li><a>Parent Portal</a></li>
                             <li><a>Staff Portal</a></li>
@@ -133,6 +133,44 @@
         </div>
     </div>
    </section>
+  <div class="bg-white relative flex flex-col items-center max-w-screen-xl px-4 mx-auto md:flex-row sm:px-6 p-8">
+    <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pr-10">
+        <div class="text-left">
+            <p class="text-red-500 max-w-md mx-auto mt-3 text-base sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
+                 duPont Matrix Highschool
+            </p>
+            <h2
+                class=" text-black text-4xl font-extrabold leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">The
+                <span class="font-bold text-red-500">#1 Ranked</span>
+                <span class="text-4xl text-black font-extrabold leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">High School in Kentucky</span>
+                
+            </h2>
+            <p class="max-w-md mx-auto mt-3 text-base text-black sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
+                 Welcome to duPont Matrix Highschool! Get
+ready for another year of being indoctirnated by the matrix and getting referalls!
+            </p>
+            <div class="mt-5 sm:flex md:mt-8">
+                <div class="rounded-md shadow"><a href=""
+                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-red-500 border border-transparent rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                        About Us
+                    </a></div>
+                <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
+                    <a href=""
+                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-red-500 transition duration-150 ease-in-out bg-white border border-red-500 rounded-md hover:text-blue-600 focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                        Contact Us
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pl-10">
+        <div class="relative w-full p-3 rounded  md:p-8">
+            <div class="rounded-lg bg-white text-black w-full">
+                <img src="https://picsum.photos/400/300" />
+            </div>
+        </div>
+    </div>
+</div>
    <section>
     
    </section>
