--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -49,7 +49,7 @@
                 <li class="menu menu-horizontal px-1 space-x-9">
                     <details>
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">About</summary>
-                        <ul class="p-2 text-black text-lg">
+                        <ul class=" z-50 p-2 text-black text-lg">
                             <li><a>Mission & Vision</a></li>
                             <li><a>History of the School</a></li>
                             <li><a>School Policies</a></li>
@@ -58,7 +58,7 @@
                     </details>
                     <details>
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">Admissions</summary>
-                        <ul class="p-2 text-black text-lg">
+                        <ul class=" z-50 p-2 text-black text-lg">
                             <li><a>Application Process</a></li>
                             <li><a>Admission Requirements</a></li>
                             <li><a>Financial Aid</a></li>
@@ -67,7 +67,7 @@
                     </details>
                     <details>
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">Athletics</summary>
-                        <ul class="p-2 text-black text-lg">
+                        <ul class="z-50 p-2 text-black text-lg">
                             <li><a>Sports Teams</a></li>
                             <li><a>Game Schedules</a></li>
                             <li><a>Athletic Achievements</a></li>
@@ -77,7 +77,7 @@
                     </details>
                     <details>
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">Links</summary>
-                        <ul class="p-2 text-black text-lg">
+                        <ul class="z-50 p-2 text-black text-lg">
                             <li><a>Student Portal</a></li>
                             <li><a>Parent Portal</a></li>
                             <li><a>Staff Portal</a></li>
@@ -87,7 +87,7 @@
                     </details>
                     <details>
                         <summary class="text-white text-lg text-transform: uppercase tracking-widest">Contact</summary>
-                        <ul class="p-2 text-black text-lg">
+                        <ul class="z-50 p-2 text-black text-lg">
                             <li><a>Contact Information</a></li>
                             <li><a>School Directory</a></li>
                             <li><a>Map & Directions</a></li>
