--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -136,13 +136,13 @@
   <div class="bg-white relative flex flex-col items-center max-w-screen-xl px-4 mx-auto md:flex-row sm:px-6 p-8">
     <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pr-10">
         <div class="text-left">
-            <p class="text-red-500 max-w-md mx-auto mt-3 text-base sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
+            <p class="text-[#9D2235] max-w-md mx-auto mt-3 text-base sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
                  duPont Matrix Highschool
             </p>
             <h2
-                class=" text-black text-4xl font-extrabold leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">The
-                <span class="font-bold text-red-500">#1 Ranked</span>
-                <span class="text-4xl text-black font-extrabold leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">High School in Kentucky</span>
+                class=" text-black text-4xl leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">The
+                <span class="font-bold text-[#9D2235]">#1 Ranked</span>
+                <span class="text-4xl text-black leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">High School in Kentucky</span>
                 
             </h2>
             <p class="max-w-md mx-auto mt-3 text-base text-black sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
@@ -150,13 +150,13 @@
 ready for another year of being indoctirnated by the matrix and getting referalls!
             </p>
             <div class="mt-5 sm:flex md:mt-8">
-                <div class="rounded-md shadow"><a href=""
-                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-red-500 border border-transparent rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                <div class="rounded-md"><a href=""
+                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-[#9D2235] border border-transparent rounded-full focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
                         About Us
                     </a></div>
-                <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
+                <div class="mt-3 rounded-md sm:mt-0 sm:ml-3">
                     <a href=""
-                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-red-500 transition duration-150 ease-in-out bg-white border border-red-500 rounded-md hover:text-blue-600 focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
+                        class="flex items-center justify-center w-full px-8 py-3 text-base font-medium leading-6 text-black transition duration-150 ease-in-out bg-white border border-black rounded-full hover:text-[#9D2235] hover:border-[#9D2235] focus:outline-none focus:shadow-outline-blue md:py-4 md:text-lg md:px-10">
                         Contact Us
                     </a>
                 </div>
@@ -166,13 +166,76 @@ ready for another year of being indoctirnated by the matrix and getting referall
     <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pl-10">
         <div class="relative w-full p-3 rounded  md:p-8">
             <div class="rounded-lg bg-white text-black w-full">
-                <img src="https://picsum.photos/400/300" />
+                <img src="{% static 'may8th.png' %}" alt="" />
             </div>
         </div>
     </div>
 </div>
    <section>
-    
+    <div style="width: 1278px; height: 248px; padding-left: 24px; padding-right: 24px; justify-content: center; align-items: center; display: inline-flex">
+  <div style="flex: 1 1 0; align-self: stretch; padding-top: 21px; padding-bottom: 21px; padding-left: 75px; padding-right: 75.02px; background: white; box-shadow: 0px 4px 20px rgba(63, 63, 63, 0.04); border-radius: 20px; border: 1px #ECECEC solid; justify-content: center; align-items: flex-start; gap: 65.71px; display: inline-flex">
+    <div style="width: 230.24px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 75.01px; height: 37.99px; color: #090717; font-size: 23.06px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Call us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 12.50px; height: 12.50px; background: #9D2235"></div>
+            <div style="width: 33.73px; height: 33.72px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 12.50px; height: 12.50px; background: #9D2235"></div>
+          </div>
+        </div>
+      </div>
+      <div style="width: 136.68px; height: 30.01px; color: #626270; font-size: 17.02px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">(502) 485-8241</div>
+      <div style="width: 144.24px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 121.16px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">Make us a call</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
+        </div>
+      </div>
+    </div>
+    <div style="width: 1px; height: 206px; background: #D0D0DB"></div>
+    <div style="width: 302.34px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 93.61px; height: 37.99px; color: #090717; font-size: 23.25px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Email us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 36.39px; height: 29.11px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 36.39px; height: 15.16px; background: #9D2235"></div>
+          </div>
+        </div>
+      </div>
+      <div style="width: 216.54px; height: 30.01px; color: #626270; font-size: 17.02px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">info@dupontmanual.com</div>
+      <div style="width: 158.39px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 135.31px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">Send us a email</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
+        </div>
+      </div>
+    </div>
+    <div style="width: 1px; height: 206px; background: #D0D0DB"></div>
+    <div style="width: 282.58px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 83.97px; height: 37.99px; color: #090717; font-size: 23.62px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Visit us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 32.95px; height: 41.19px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 12.36px; height: 12.36px; background: #9D2235"></div>
+          </div>
+        </div>
+      </div>
+      <div style="width: 225px; height: 60px; color: #626270; font-size: 17.44px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">120 West Lee St Louisville, KY 40208</div>
+      <div style="width: 183.76px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 160.68px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">View our locations</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
    </section>
 </body>
 </html>
