--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -140,9 +140,9 @@
                  duPont Matrix Highschool
             </p>
             <h2
-                class=" text-black text-4xl leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">The
+                class=" text-black text-5xl leading-10 tracking-tight sm:text-6xl sm:leading-none md:text-7xl">The
                 <span class="font-bold text-[#9D2235]">#1 Ranked</span>
-                <span class="text-4xl text-black leading-10 tracking-tight sm:text-5xl sm:leading-none md:text-6xl">High School in Kentucky</span>
+                <span class="text-5xl text-black leading-10 tracking-tight sm:text-6xl sm:leading-none md:text-7xl">High School in Kentucky</span>
                 
             </h2>
             <p class="max-w-md mx-auto mt-3 text-base text-black sm:text-lg md:mt-5 md:text-xl md:max-w-3xl">
@@ -165,9 +165,15 @@ ready for another year of being indoctirnated by the matrix and getting referall
     </div>
     <div class="flex items-center py-5 md:w-1/2 md:pb-20 md:pt-10 md:pl-10">
         <div class="relative w-full p-3 rounded  md:p-8">
-            <div class="rounded-lg bg-white text-black w-full">
-                <img src="{% static 'may8th.png' %}" alt="" />
-            </div>
+<div class="relative w-full h-96 bg-cover bg-center rounded-xl" style="background-image: url('{% static "./images/graduatingClass.png" %}');">
+    <!-- Red Box and Text Content -->
+    <div class="absolute bottom-0 left-0 bg-[#9D2235] text-white p-6 rounded-tr-lg w-64">
+        <p class="text-sm mb-2">May 8th</p>
+        <h1 class="text-xl font-bold mb-4">Senior Picture Day</h1>
+        <a href="#" class="text-white">Discover Event</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M12 8l4 4-4 4M8 12h7"/></svg>
+    </div>
+</div>
         </div>
     </div>
 </div>
