--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -170,99 +170,90 @@ ready for another year of being indoctirnated by the matrix and getting referall
     <div class="absolute bottom-0 left-0 bg-[#9D2235] text-white p-6 rounded-tr-lg w-64">
         <p class="text-sm mb-2">May 8th</p>
         <h1 class="text-xl font-bold mb-4">Senior Picture Day</h1>
+
+
+        <div class = "flex flex-direction-col">
         <a href="#" class="text-white">Discover Event</a>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M12 8l4 4-4 4M8 12h7"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10" />
+            <path d="M12 8l4 4-4 4M8 12h7" />
+        </svg>
+
+        </div>
+
+
+
     </div>
 </div>
         </div>
     </div>
 </div>
-
-<div class="border border-[#D0D0DB] rounded-box flex w-5/6 flex-col lg:flex-row" style = "margin: 0 auto;">
-
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
+   <section>
+    <div style="width: 1278px; height: 248px; padding-left: 24px; padding-right: 24px; justify-content: center; align-items: center; display: inline-flex">
+  <div style="flex: 1 1 0; align-self: stretch; padding-top: 21px; padding-bottom: 21px; padding-left: 75px; padding-right: 75.02px; background: white; box-shadow: 0px 4px 20px rgba(63, 63, 63, 0.04); border-radius: 20px; border: 1px #ECECEC solid; justify-content: center; align-items: flex-start; gap: 65.71px; display: inline-flex">
+    <div style="width: 230.24px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 75.01px; height: 37.99px; color: #090717; font-size: 23.06px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Call us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 12.50px; height: 12.50px; background: #9D2235"></div>
+            <div style="width: 33.73px; height: 33.72px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 12.50px; height: 12.50px; background: #9D2235"></div>
+          </div>
         </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
+      </div>
+      <div style="width: 136.68px; height: 30.01px; color: #626270; font-size: 17.02px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">(502) 485-8241</div>
+      <div style="width: 144.24px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 121.16px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">Make us a call</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
         </div>
-
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
-       
-        
-
+      </div>
     </div>
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
+    <div style="width: 1px; height: 206px; background: #D0D0DB"></div>
+    <div style="width: 302.34px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 93.61px; height: 37.99px; color: #090717; font-size: 23.25px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Email us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 36.39px; height: 29.11px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 36.39px; height: 15.16px; background: #9D2235"></div>
+          </div>
         </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
+      </div>
+      <div style="width: 216.54px; height: 30.01px; color: #626270; font-size: 17.02px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">info@dupontmanual.com</div>
+      <div style="width: 158.39px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 135.31px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">Send us a email</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
         </div>
-
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
-       
-        
-
+      </div>
     </div>
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
+    <div style="width: 1px; height: 206px; background: #D0D0DB"></div>
+    <div style="width: 282.58px; height: 206px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+      <div style="width: 83.97px; height: 37.99px; color: #090717; font-size: 23.62px; font-family: Crimson Pro; font-weight: 700; line-height: 37.99px; word-wrap: break-word">Visit us</div>
+      <div style="width: 70px; height: 70px; border-radius: 35px; overflow: hidden; justify-content: center; align-items: center; display: inline-flex">
+        <div style="flex: 1 1 0; align-self: stretch; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 70px; height: 70px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+            <div style="width: 70px; height: 70px; background: #FFF7F1"></div>
+            <div style="width: 32.95px; height: 41.19px; opacity: 0.35; background: #9D2235"></div>
+            <div style="width: 12.36px; height: 12.36px; background: #9D2235"></div>
+          </div>
         </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
+      </div>
+      <div style="width: 225px; height: 60px; color: #626270; font-size: 17.44px; font-family: Crimson Pro; font-weight: 700; line-height: 30.01px; word-wrap: break-word">120 West Lee St Louisville, KY 40208</div>
+      <div style="width: 183.76px; justify-content: center; align-items: flex-start; gap: 5.80px; display: inline-flex">
+        <div style="width: 160.68px; height: 20px; color: #9D2235; font-size: 19px; font-family: Crimson Pro; font-weight: 700; line-height: 20px; word-wrap: break-word">View our locations</div>
+        <div style="width: 17.28px; height: 18px; padding-top: 2.21px; padding-bottom: 2.14px; padding-left: 1.44px; padding-right: 1.44px; flex-direction: column; justify-content: center; align-items: center; display: inline-flex">
+          <div style="width: 14.40px; height: 13.64px; background: #9D2235"></div>
         </div>
-
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
-       
-        
-
+      </div>
     </div>
-
-    
-
-
-    <!-- <div class="card  border border-[#D0D0DB]rounded-box grid ml-20 h-32 flex-grow place-items-center">content</div>
-    <div class="card  border border-[#D0D0DB] rounded-box grid ml-20 h-32 flex-grow place-items-center">content</div> -->
-
+  </div>
 </div>
-
-  <div style = "height: 100vh;"></div>
-
-
+   </section>
 </body>
 </html>
