--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -178,6 +178,10 @@ ready for another year of being indoctirnated by the matrix and getting referall
     </div>
 </div>
 
+
+
+{% comment %} Contact information section {% endcomment %}
+
 <div class="border border-[#D0D0DB] rounded-box flex w-5/6 flex-col lg:flex-row" style = "margin: 0 auto;">
 
     <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
@@ -212,13 +216,13 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
         <div class = "flex flex-col ml-10">
             <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
+                <p class = "text-3xl font-bold text-[#090717] mt-2">Email Us</p>
+                <p class = "text-[#626270] font-bold text-xl mt-2">info@dupontmanual.com</p>
     
             </div>
     
             <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
+                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Send us a email <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
             </div>
 
         </div>
@@ -236,18 +240,17 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
         <div class = "flex flex-col ml-10">
             <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
+                <p class = "text-3xl font-bold text-[#090717] mt-2">Visit Us</p>
+                <p class = "text-[#626270] font-bold text-xl mt-2">120 West Lee St Louisville, KY 40208</p>
     
             </div>
     
             <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
+                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Come Visit Us <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
             </div>
 
         </div>
 
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
        
         
 
@@ -262,6 +265,9 @@ ready for another year of being indoctirnated by the matrix and getting referall
 </div>
 
   <div style = "height: 100vh;"></div>
+
+
+    
 
 
 </body>
