--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -1,10 +1,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
+    
+}
+
+*:not(.font-noto-serif) {
     font-family: 'Crimson Pro';
 }
 
+
+.font-noto-serif {
+    font-family: 'Noto Serif', serif !important;
+  }
