--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -182,92 +182,109 @@ ready for another year of being indoctirnated by the matrix and getting referall
 
 {% comment %} Contact information section {% endcomment %}
 
-<div class="border border-[#D0D0DB] rounded-box flex w-5/6 flex-col lg:flex-row" style = "margin: 0 auto;">
-
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
+<div class="border border-[#D0D0DB] shadow-xl rounded-box flex w-5/6 mx-auto" style="box-sizing: border-box; ">
+    <!-- First Section: Call Us -->
+    <div class="w-1/3 p-5 flex flex-row justify-start card place-items-center box-border">
+        <img class="max-w-[80px]" src="{% static './images/phone.svg' %}" alt="">
+        <div class="flex flex-col ml-4 box-border">
+            <p class="text-3xl font-bold text-[#090717] mt-2">Call us</p>
+            <p class="text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
+            <a href="#" class="hover:font-extrabold hover:underline hover:underline-offset-4 flex flex-row justify-start items-center text-[#9D2235] font-bold text-xl mt-5">
+                Give us a call
+                <img class="ml-2" src="{% static './images/arrow.svg' %}" alt="">
+            </a>
         </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Call us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">(502) 485-8241</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Give us a call <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
-        </div>
-
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
-       
-        
-
-    </div>
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
-        </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Email Us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">info@dupontmanual.com</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Send us a email <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
-        </div>
-
-        <img class = "ml-20" src="{% static "./images/verticaldiv.svg" %}" alt="">
-       
-        
-
-    </div>
-    <div class=" w-1/3 p-5 flex  flex-row justify-start card        place-items-center">
-
-        <div class = "ml-5">
-            <img src="{% static "./images/phone.svg" %}" alt="">
-        </div>
-
-        <div class = "flex flex-col ml-10">
-            <div class = "">
-                <p class = "text-3xl font-bold text-[#090717] mt-2">Visit Us</p>
-                <p class = "text-[#626270] font-bold text-xl mt-2">120 West Lee St Louisville, KY 40208</p>
-    
-            </div>
-    
-            <div>
-                <a href = "" class = "hover:font-extrabold hover:underline hover:underline-offset-4  flex flex-row justify-start  items-center text-[#9D2235] font-bold text-xl  mt-5">Come Visit Us <span><img class = "ml-2" src="{% static "./images/arrow.svg" %}" alt=""></span></a>
-            </div>
-
-        </div>
-
-       
-        
-
     </div>
 
-    
+    <!-- Vertical Divider -->
+    <div class="border-l-2 border-[#D0D0DB]"></div>
+
+    <!-- Second Section: Email Us -->
+    <div class="w-1/3 p-5 flex flex-row justify-start card place-items-center box-border">
+        <img class="max-w-[80px]" src="{% static './images/email.svg' %}" alt="">
+        <div class="flex flex-col ml-4 box-border">
+            <p class="text-3xl font-bold text-[#090717] mt-2">Email Us</p>
+            <p class="text-[#626270] font-bold text-xl mt-2">info@dupontmanual.com</p>
+            <a href="#" class="hover:font-extrabold hover:underline hover:underline-offset-4 flex flex-row justify-start items-center text-[#9D2235] font-bold text-xl mt-5">
+                Send us an email
+                <img class="ml-2" src="{% static './images/arrow.svg' %}" alt="">
+            </a>
+        </div>
+    </div>
+
+    <!-- Vertical Divider -->
+    <div class="border-l-2 border-[#D0D0DB]"></div>
 
 
-    <!-- <div class="card  border border-[#D0D0DB]rounded-box grid ml-20 h-32 flex-grow place-items-center">content</div>
-    <div class="card  border border-[#D0D0DB] rounded-box grid ml-20 h-32 flex-grow place-items-center">content</div> -->
-
+    <!-- Third Section: Visit Us -->
+    <div class="w-1/3 p-5 flex flex-row justify-start card place-items-center box-border">
+        <img class="max-w-[80px]" src="{% static './images/location.svg' %}" alt="">
+        <div class="flex flex-col ml-4 box-border">
+            <p class="text-3xl font-bold text-[#090717] mt-2">Visit Us</p>
+            <p class="text-[#626270] font-bold text-xl mt-2">120 West Lee St Louisville, KY 40208</p>
+            <a href="#" class="hover:font-extrabold hover:underline hover:underline-offset-4 flex flex-row justify-start items-center text-[#9D2235] font-bold text-xl mt-5">
+                Come Visit Us
+                <img class="ml-2" src="{% static './images/arrow.svg' %}" alt="">
+            </a>
+        </div>
+    </div>
 </div>
 
-  <div style = "height: 100vh;"></div>
 
 
+{% comment %} START our motto section {% endcomment %}
+
+<div class="container mx-auto py-10">
+    {% comment %} OUR MOTTO HEADING {% endcomment %}
+    <div class = "w-1/3 border-b-4 border-[#9D2235]" style = "margin: 20px auto; "> 
+        <h1 class = "m-auto text-center text-6xl pb-3 font-bold">Our <span class = "text-[#9D2235]" >Motto</span></h1>
+    </div> 
     
+
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-0 text-center text-white">
+  
+      <!-- Excellence Card -->
+      <div class="bg-cover bg-center p-6 bg-[url('{% static './images/excellence.png' %}')] ">
+        <div class="icon mb-4">
+          <!-- Excellence icon -->
+          <img class="w-22 h-22 mx-auto" src="{% static './images/excellence.svg' %}">
+        </div>
+        <h2 class="text-[44px] font-bold mb-2">Excellence</h2>
+        <p class="text-2xl text-[#A6A6A6] font-noto-serif">Empower The Present</p>
+      </div>
+  
+      <!-- Diversity Card -->
+      <div class="bg-cover bg-center p-6 bg-[url('{% static './images/diversity.png' %}')] border-l-4 border-[#9D2235]">
+        <div class="icon mb-4">
+          <!-- Diversity icon -->
+          <img class="w-22 h-22 mx-auto" src="{% static './images/diversity.svg' %}">
+        </div>
+        <h2 class="text-[44px] font-bold mb-2">Diversity</h2>
+        <p class="text-2xl text-[#A6A6A6] font-noto-serif">Empower The Future</p>
+      </div>
+  
+      <!-- Tradition Card -->
+      <div class="bg-cover bg-center p-6 bg-[url('{% static './images/tradition.png' %}')] border-l-4 border-[#9D2235]">
+        <div class="icon mb-4">
+          <!-- Tradition icon -->
+          <img class="w-22 h-22 mx-auto" src="{% static './images/tradition.svg' %}">
+        </div>
+        <h2 class="text-[44px] font-bold mb-2">Tradition</h2>
+        <p class="text-2xl text-[#A6A6A6] font-noto-serif">Honor The Past</p>
+      </div>
+  
+    </div>
+  </div>
+  
+  
+  
+
+
+
+
+    {% comment %} END our motto section {% endcomment %}
+
 
 
 </body>
