NEWS SECTION DONE EXCEPT RESPONSIVENESS

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
 * {
     margin: 0;
@@ -9,11 +10,16 @@
     
 }
 
-*:not(.font-noto-serif) {
+*:not(.font-noto-serif):not(.font-source-sans) {
     font-family: 'Crimson Pro';
 }
 
 
 .font-noto-serif {
     font-family: 'Noto Serif', serif !important;
+  }
+
+
+  .font-source-sans {
+    font-family: 'Source Sans 3', serif !important;
   }
