--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -526,6 +526,115 @@ ready for another year of being indoctirnated by the matrix and getting referall
             </div>
         </div>
     </section>
+
+    <section id = "programs" class = "mt-20"> 
+
+        <div  class = "w-1/2 flex flex-center flex-col" style = "margin: 20px auto; "> 
+            <h1 class = "m-auto text-center text-6xl pb-3 font-bold border-[#9D2235] border-b border-b-4">Programs For <span class = "text-[#9D2235] font-bolder italic " >Every Student</span></h1>
+            <p class = " mt-5 text-[#202020] text-md leading-loose font-noto-serif text-center mb-5">Dupont Matrix High School offers a plethora of magnet programs. This is some dummy text here. This is some dummy text here. </p>
+            <button class = "m-auto text-center p-5 pt-3 pb-3 flex  font-bold border border-4 border-[#9D2235] text-xl justify-center">Learn More <span> <img class = "ml-3 w-[30px]" src = "{% static './images/rightarrow.svg' %}"> </span></button>
+        </div> 
+
+
+        <div class=" w-full pt-10" style = "100vh">
+
+            {% comment %} TOP SECTION {% endcomment %}
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-0 w-full  text-center text-red">
+
+                <div style = "height: 60vh" class="bg-cover text-left p-6 bg-[url('{% static './images/mst.png' %}')] flex items-center">
+                    <div class="w-3/4">
+                        <h2 class="text-3xl font-bold mb-2 flex items-center text-white">
+                            MATH, SCIENCE, TECHNOLOGY (MST)
+                            
+                        </h2>
+                        <p class="text-xl text-white font-noto-serif mt-5">This is dummy text hereThis is dummy text hereThis is dummy text hereThis is dummy text here
+                        </p>
+                    </div>
+                </div>
+
+                <div style = "height: 60vh" class="bg-cover  border-l-4 border-[#9D2235] text-left p-6 bg-[url('{% static './images/hsu.png' %}')] flex items-center">
+                    <div class="w-3/4">
+                        <h2 class="text-3xl font-bold mb-2 flex items-center text-white">
+                            HIGH SCHOOL UNIVERSITY (HSU)
+                            
+                        </h2>
+                        <p class="text-xl text-white font-noto-serif mt-5">This is dummy text hereThis is dummy text hereThis is dummy text hereThis is dummy text here
+                        </p>
+                    </div>
+                </div>
+
+            </div> 
+
+            {% comment %} BOTTOM SECTION {% endcomment %}
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-0 w-full  text-center text-red">
+
+                <div style = "height: 40vh" class="bg-cover text-left p-6 bg-[url('{% static './images/jnc.png' %}')] flex items-center">
+
+                    <div class="w-5/6">
+                        <h2 class="text-2xl font-bold mb-2 flex items-center text-white">
+                            JOURNALISM & COMMUNICATION (J&C)
+                           
+                        </h2>
+                        <p class="text-lg text-white  font-noto-serif">This is dummy text hereThis is dummy text hereThis is dummy text hereThis is dummy text here
+                        </p>
+                    </div>
+
+
+                </div>
+
+
+               
+
+                <div style="height: 40vh" class="bg-cover text-left p-6 border-[#9D2235] border-t-4 border-r-4 border-l-4 bg-[url('{% static './images/ypas.png' %}')] flex items-center">
+
+                    <div class="w-5/6">
+                        <h2 class="text-2xl font-bold mb-2 flex items-center text-white b">
+                            YOUTH PERFORMING ARTS SCHOOL (YPAS)
+                           
+                        </h2>
+                        <p class="text-lg text-white  font-noto-serif">This is dummy text hereThis is dummy text hereThis is dummy text hereThis is dummy text here
+                        </p>
+                    </div>
+
+
+                </div>
+
+
+                <div style = "height: 40vh" class="bg-cover text-left p-6 bg-[url('{% static './images/va.png' %}')] flex items-center">
+
+                    <div class="w-5/6">
+                        <h2 class="text-2xl font-bold mb-2 flex items-center text-white">
+                            VISUAL ART (VA)
+                           
+                        </h2>
+                        <p class="text-lg text-white  font-noto-serif">This is dummy text hereThis is dummy text hereThis is dummy text hereThis is dummy text here
+                        </p>
+                    </div>
+
+
+                </div>
+
+                
+
+
+                </div>
+
+            </div> 
+
+
+
+
+
+        </div>
+
+
+            
+
+
+
+    </section>
     
     <div style = "height: 100vh"> </div>
 
